# txtr

./: .gitignore  README.md  pyproject.toml
txtr/: __init__.py
